# hotspot

./: .gitignore  README.md  pyproject.toml
data/: hotspot.data.aniCuts.csv
scripts/: read_anicuts_data.py
src/hotspot_reader/: __init__.py  read_anicuts_data.py
