[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotspot-reader"
version = "0.1.0"
description = "A tool to read and convert Telescope Array cosmic ray data files"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.3.0",
]

[project.scripts]
read-anicuts = "hotspot_reader.read_anicuts_data:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hotspot_reader"]
include-package-data = true

[tool.setuptools.package-data]
hotspot_reader = ["data/*.txt", "data/*.csv", "data/*.gz"]

